--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -6,6 +6,7 @@
 {% endblock %}
 {% block content %}
   <div class="product-detail">
+    <h1> hello</h1>
     <img src="{% if product.image %}{{ product.image.url }}{% else %}
     {% static "img/no_image.png" %}{% endif %}">
     <h1>{{ product.name }}</h1>
