--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -22,9 +22,12 @@
     <h1> {% if category %} {{ category.name }}{% else %} Products
         {% endif %} </h1>
         {% for product in products %}
+        <h2> hello gays!</h2>
         <div class="item">
+            
             <a href="{{product.get_absolute_url}}">
-                <img src="{% if product.image %}{{product.image.url}}{% else %}{% static "img/no_image.png" %}{% endif %}>
+                <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+            
             </a>
             <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
         <br>
